--- a/configure.in
+++ b/configure.in
@@ -3411,6 +3411,13 @@ AC_HELP_STRING([--enable-render-d3d], [enable the Direct3D render driver [[defau
         EXTRA_LDFLAGS="$EXTRA_LDFLAGS -Wl,-framework,Carbon"
         EXTRA_LDFLAGS="$EXTRA_LDFLAGS -Wl,-framework,IOKit"
         ;;
+    *bexkat1*)
+	ARCH=bexkat1
+	CheckNativeClient
+	CheckDummyAudio
+	CheckDummyVideo
+	CheckInputEvents
+	;;
     *-nacl|*-pnacl)
         ARCH=nacl
         CheckNativeClient
